@@ -35,8 +35,8 @@ setup(
     include_package_data = True,
     zip_safe=False,
     install_requires=['setuptools',
-                      'martian >= 0.9.7',
-                      'grokcore.component >= 1.3',
+                      'martian >= 0.10',
+                      'grokcore.component >= 1.4',
                       'simplejson',
                       'pytz',
                       'ZODB3',
