@@ -5,8 +5,8 @@ RestrictedPython = 3.4.2
 ZConfig = 2.5.1
 ZODB3 = 3.8
 docutils = 0.4
-martian = 0.9.7
-grokcore.component = 1.3
+martian = 0.10
+grokcore.component = 1.4
 mechanize = 0.1.7b
 pytz = 2007k
 simplejson = 1.7.1
